Wrap nav in header, add position:fixed, add link to logo

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,13 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+header {
+  position: fixed;
+  width: 100%;
+  background: #fff;
+  box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.1);
+}
+
 #toolbar {
   display: flex;
   height: 48px;
@@ -18,6 +25,7 @@ body {
   display: flex;
   padding: 10px;
   align-items: center;
+  text-decoration: none;
 }
 
 #menu-bars-container {
